--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.5.2",
     "typescript-eslint": "8.10.0"
